-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
OSX 10.9.4 MacBook Pro NVIDIA GeForce 8600M GT 256 MB
The new QOpenGLWidget does to work as drop-in replacement of QGLWidget - the view is drawn with garbage video content. Using QGLWidget or the default viewport performs as expected.
Supplied is a screenshot which also contains the example code.
The effected platform is OSX, under Win7 the example runs fine!
- is required for
-
QTBUG-41613 Issues to be fixed before 5.4.0 RC
-
- Closed
-
| For Gerrit Dashboard: QTBUG-41046 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 96981,3 | Fix QOpenGLWidget on Cocoa when used as viewport | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 97094,2 | Revert "Fix QOpenGLWidget on Cocoa when used as viewport" | 5.4 | qt/qtbase | Status: ABANDONED | +1 | 0 |
| 97109,4 | Avoid breaking BC with new virtuals in QOpenGLPaintDevice | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |