src/gui/opengl/qopenglpaintdevice.cpp
@@ -35,6 +35,7 @@
 #include <qpaintengine.h>
 #include <qthreadstorage.h>
 
+#include <private/qopenglpaintdevice_p.h>
 #include <private/qobject_p.h>
 #include <private/qopenglcontext_p.h>
 #include <private/qopenglframebufferobject_p.h>
@@ -98,23 +99,6 @@ QT_BEGIN_NAMESPACE
 
 */
 
-class QOpenGLPaintDevicePrivate
-{
-public:
-    QOpenGLPaintDevicePrivate(const QSize &size);
-
-    QSize size;
-    QOpenGLContext *ctx;
-
-    qreal dpmx;
-    qreal dpmy;
-    qreal devicePixelRatio;
-
-    bool flipped;
-
-    QPaintEngine *engine;
-};
-
 /*!
     Constructs a QOpenGLPaintDevice.
 
@@ -148,6 +132,14 @@ QOpenGLPaintDevice::QOpenGLPaintDevice(const QSize &size)
 */
 QOpenGLPaintDevice::QOpenGLPaintDevice(int width, int height)
     : d_ptr(new QOpenGLPaintDevicePrivate(QSize(width, height)))
+{
+}
+
+/*!
+    \internal
+ */
+QOpenGLPaintDevice::QOpenGLPaintDevice(QOpenGLPaintDevicePrivate *dd)
+    : d_ptr(dd)
 {
 }
 
@@ -351,17 +343,6 @@ bool QOpenGLPaintDevice::paintFlipped() const
 }
 
 /*!
-  This virtual method is called when starting to paint.
-
-  The default implementation does nothing.
-
-  \sa endPaint()
- */
-void QOpenGLPaintDevice::beginPaint()
-{
-}
-
-/*!
     This virtual method is provided as a callback to allow re-binding a target
     frame buffer object or context when different QOpenGLPaintDevice instances
     are issuing draw calls alternately.
@@ -372,17 +353,6 @@ void QOpenGLPaintDevice::beginPaint()
     The default implementation does nothing.
 */
 void QOpenGLPaintDevice::ensureActiveTarget()
-{
-}
-
-/*!
-  This virtual method is called when the painting has finished.
-
-  The default implementation does nothing.
-
-  \sa beginPaint()
-*/
-void QOpenGLPaintDevice::endPaint()
 {
 }
 
