src/gui/opengl/qopenglpaintdevice_p.h
@@ -31,59 +31,51 @@
 **
 ****************************************************************************/
 
-#ifndef QOPENGLPAINTDEVICE_H
-#define QOPENGLPAINTDEVICE_H
+#ifndef QOPENGL_PAINTDEVICE_P_H
+#define QOPENGL_PAINTDEVICE_P_H
 
-#include <QtCore/qglobal.h>
+//
+//  W A R N I N G
+//  -------------
+//
+// This file is not part of the Qt API.  It exists for the convenience
+// of the Qt OpenGL classes.  This header file may change from
+// version to version without notice, or even be removed.
+//
+// We mean it.
+//
 
-#ifndef QT_NO_OPENGL
-
-#include <QtGui/qpaintdevice.h>
-#include <QtGui/qopengl.h>
-#include <QtGui/qopenglcontext.h>
+#include <qopenglpaintdevice.h>
 
 QT_BEGIN_NAMESPACE
 
-class QOpenGLPaintDevicePrivate;
+class QOpenGLContext;
+class QPaintEngine;
 
-class Q_GUI_EXPORT QOpenGLPaintDevice : public QPaintDevice
+class Q_GUI_EXPORT QOpenGLPaintDevicePrivate
 {
-    Q_DECLARE_PRIVATE(QOpenGLPaintDevice)
 public:
-    QOpenGLPaintDevice();
-    explicit QOpenGLPaintDevice(const QSize &size);
-    QOpenGLPaintDevice(int width, int height);
-    QOpenGLPaintDevice(QOpenGLPaintDevicePrivate *dd);
-    virtual ~QOpenGLPaintDevice();
+    QOpenGLPaintDevicePrivate(const QSize &size);
+    virtual ~QOpenGLPaintDevicePrivate() { }
 
-    int devType() const { return QInternal::OpenGL; }
-    QPaintEngine *paintEngine() const;
+    static QOpenGLPaintDevicePrivate *get(QOpenGLPaintDevice *dev) { return dev->d_func(); }
 
-    QOpenGLContext *context() const;
-    QSize size() const;
-    void setSize(const QSize &size);
-    void setDevicePixelRatio(qreal devicePixelRatio);
+    virtual void beginPaint() { }
+    virtual void endPaint() { }
 
-    qreal dotsPerMeterX() const;
-    qreal dotsPerMeterY() const;
+public:
+    QSize size;
+    QOpenGLContext *ctx;
 
-    void setDotsPerMeterX(qreal);
-    void setDotsPerMeterY(qreal);
+    qreal dpmx;
+    qreal dpmy;
+    qreal devicePixelRatio;
 
-    void setPaintFlipped(bool flipped);
-    bool paintFlipped() const;
+    bool flipped;
 
-    virtual void ensureActiveTarget();
-
-protected:
-    int metric(QPaintDevice::PaintDeviceMetric metric) const;
-
-    Q_DISABLE_COPY(QOpenGLPaintDevice)
-    QScopedPointer<QOpenGLPaintDevicePrivate> d_ptr;
+    QPaintEngine *engine;
 };
 
 QT_END_NAMESPACE
 
-#endif // QT_NO_OPENGL
-
-#endif // QOPENGLPAINTDEVICE_H
+#endif // QOPENGL_PAINTDEVICE_P_H
